Fix footer position on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -219,10 +219,12 @@ h1 {
 }
 
 .attribution {
-  position: absolute;
-  bottom: 1em;
+  position: relative;
+  bottom: 1.5rem;
   left: 0;
   right: 0;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 0;
+  height: 0;
 }
